[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/scripts/slime.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_00.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_01.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_02.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_03.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_04.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_05.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_06.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_07.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_08.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_09.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_10.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_11.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_12.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_13.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/PNG/sprites/Slime/idle/Slime_left/slime_left_14.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.1116, 15.8812 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "left",
"speed": 8.0
}, {
"frames": [  ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 113.748

[node name="Enemy_Slime" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13.9631 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "left"

[node name="player_container" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.340561, 11.5791 )
shape = SubResource( 3 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
